--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsx src/cli.ts",
+    "extract:digits": "tsx scripts/extract_digits.ts",
     "check": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run"
   },
